k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: os-container-project
  name: os-container-project
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: os-container-project
  type: NodePort
