k8s/zookeeper.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
  namespace: os-container-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
      name: zookeeper
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
        - image: bitnami/zookeeper
          name: zookeeper
          ports:
            - containerPort: 2181
          resources:
            requests:
              cpu: "256m"
              memory: "256Mi"
            limits:
              cpu: "256m"
              memory: "256Mi"
          readinessProbe:
            tcpSocket:
              port: 2181
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 2181
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - name: zookeeper-persistent-storage
              mountPath: "/bitnami"
      volumes:
        - name: zookeeper-persistent-storage
          persistentVolumeClaim:
            claimName: zookeeper-claim
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: os-container-project
spec:
  ports:
    - name: zookeeper
      port: 2181
      protocol: TCP
      targetPort: 2181
  selector:
    app: zookeeper
  type: ClusterIP
